[gd_scene load_steps=2 format=3 uid="uid://dmaoh5wd4m0ld"]

[ext_resource type="Script" path="res://scenes/menus/pause_in_race.gd" id="1_bqur3"]

[node name="PauseInRace" type="CanvasLayer"]
process_mode = 2
layer = 20
script = ExtResource("1_bqur3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -197.0
offset_right = 182.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2

[node name="btn_continue" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="btn_restart" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[node name="btn_exit" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/btn_continue" to="." method="_on_btn_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_restart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_exit" to="." method="_on_btn_exit_pressed"]
